# pytracer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/pytracer/: __init__.py  color.py  main.py  ray.py  vector3.py
tests/: test_vector3.py
