[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytracer"
version = "0.1.0"
authors = [{name = "Gabe Reed", email = "gabrieljreed@gmail.com"}]
description = "Python raytracer"
keywords = []
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[tool.isort]
profile = "black"

[project.urls]
"Homepage" = "https://github.com/gabrieljreed/pytracer"
"Bug Tracker" = "https://github.com/gabrieljreed/pytracer/issues"

[tool.ruff]
exclude = [
    ".git",
    "dist",
    "site-packages",
    "venv",
]
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["D105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
